# pico-primefinder

./: .gitignore  CMakeLists.txt  main.c
